<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    
    <string name="factory_xiexin">深圳市协鑫信息技术有限公司</string>
    
    <string name="money_xiexin">财务共享服务中心</string>

    <string name="app_name">ces</string>
    
    <string name="login_text">登录</string>
    <string name="logining">正在登录</string>
    
    <string name="remmenber_pwd_text">记住密码</string>
    <string name="auto_login_text">自动登录</string>
    <string name="p_select_zt_text">请选择账套</string>
    
    <string name="login_account_hint">用户名</string>
    <string name="login_pwd_hint">密  码</string>
    
    <string name="please_enter_account">请输入用户名</string>
    <string name="please_enter_pwd">请输入密码</string> 
    <string name="please_select_zt">请选择账套</string>
    <string name="please_sure_modify_account">请确认是否修改账套!</string>
    
    <string name="select_zt">账套选择</string>
    
    <string name="get_accout_error">用户名错误或此用户无帐套信息</string>
    
    
    <string name="server_config">服务器配置</string>
    <string name="server_config_url_hint">服务器地址</string>
    <string name="server_config_port_hint">端      口</string>
    
    <string name="finish_to">完成</string>
    <string name="submit">提交</string>
    
   	<string name="please_enter_server_config_url_hint">请输入服务器地址</string>
    <string name="please_enter_server_config_port_hint">请输入端口</string>
    
    
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    
    <string name="server_config_change_msg">确认更改服务器地址和端口 ？如果更改将清空所有登录信息。</string>
    
   	<string name="sure_to_del_the_msg">确认删除此条消息?。</string>
   	
   	<string name="del_msg_success">删除消息成功！</string>
   	
   	<string name="no_msg">暂无消息</string>
   	<string name="no_announce">暂无公告</string>
       
    <string name="return_text">返回</string>
    
    <string name="user_info_no_data">暂无</string>
    
    <string name="loading_tip_text">加载中...</string>
    <string name="expect">精彩待续...</string>
    <string name="data_laoding_failed">数据加载失败</string>
    <string name="tip_last_page">已经到最后啦!</string>
    <string name="no_invoice">暂无单据</string>
    <string name="please_check_net">请检查网络</string>
    
    
    <string name="pl_listview_header_hint_normal_up">下拉刷新</string>
    <string name="pl_listview_header_hint_ready">松开刷新</string>
    <string name="pl_listview_header_hint_loading">正在刷新...</string>
    
    <string name="pl_listview_footer_hint_normal_down">向上滑动获取更多</string>
    <string name="pl_listview_footer_hint_ready">松开获取更多</string>
    <string name="pl_listview_footer_hint_loading">正在疯狂地加载...</string>
    
    <string name="pl_xlistview_header_last_time">上次更新时间：</string>
    <string name="pl_xlistview_footer_hint_normal">查看更多</string>
    <string name="pl_xlistview_footer_hint_ready">松开载入更多</string>
    <string name="pl_network_setting_btn">设置网络</string>
    <string name="pl_refresh_retry_btn">点击重试</string>
    <string name="pl_error_msg_net_refresh">未连接网络或连接失败，请检查网络后重试！</string>
    <string name="pl_loading">正在疯狂地加载...</string>
    
    <string name="menu_pend_approval">待办事项</string>
    <string name="menu_sent_item">已发事项</string>
    <string name="menu_scratch_upcome">暂存待办</string>
    <string name="menu_approved">已办事项</string>
    <string name="menu_message">消息中心</string>
    <string name="menu_ads">公告中心</string>
    <string name="menu_invoice">发票真伪</string>
    <string name="menu_record">记一笔</string>
    <string name="menu_update">检查更新</string>
    
    
    <string name="click_exit_label">"再按一次退出程序" </string>
    
    <string name="default_server_confi_url">http://210.75.12.178</string>
    <string name="default_server_confi_port">8091</string>
    
    <string name="switch_account_text">切换帐套</string>
    <string name="loginout_text">注销</string>
    <string name="request_zhangtao_null">此用户名下无帐套信息,请确认用户名正确</string>
    
    <!-- 详情 -->
    <string name="invoice_info">详情</string>
    <string name="invoice_approval_road">路线</string>
    <string name="invoice_approval_road_info">审批路线</string>
    <string name="invoice_attachment">附件</string>
    <string name="request_appr_road_list_error">加载单据审批路线失败</string>
    <string name="set_plugin">加签</string>
    <string name="notify">知会</string>
    <string name="approval">审批</string>
    <string name="look_invoice_info">查看明细</string>
    
    <!-- 人员 -->
    <string name="please_select_employee">请选择人员</string>
    <string name="search">搜索</string>
    <string name="please_enter_employee_name">请输入您要查询的姓名</string>

    
    <string name="sure_to_login_out">请确认是否注销账号信息！</string>
    <string name="xiangqian">向前</string>
    <string name="xianghou">向后</string>
    
    
    <string name="please_enter_approval_content">请填写审核内容</string>
    <string name="please_check_qianhou">请选择向前或向后</string>
    
    <string name="notify_success">知会<xliff:g id="norify_success">%s</xliff:g>成功</string>
    <string name="plus_sign_success">加签<xliff:g id="plus_sign_success">%s</xliff:g>成功</string>
    <string name="approval_success">审批成功</string>
    
    <string name="attachment">附件</string>
    <string name="download">下载</string>
    <string name="open_file">打开</string>
    
    <string name="msg_center">消息中心</string>
    <string name="announce_center">公告</string>
    <string name="announce_attachment">附件</string>
    <string name="announce_no_attachment">没有附件</string>
    <string name="msg_no_attachment">没有附件</string>
    <string name="invoice_no_attachment">此单据没有附件</string>
    
   	<string name="submit_success_text">提交成功</string>
   	<string name="submit_error_text">提交失败</string>
   	
   	<string name="readed">已读</string>
   	<string name="noread">未读</string>
   	
   	<string name="no_phone_info">没有电话信息！</string>
   	<string name="please_download_at_wifi">文件过大,请在wifi网络下加载</string>
   	<string name="download_at_wifi">当前wifi网络下,图片正在加载...</string>
   	
   	<string name="app_pause">暂停</string>
   	<string name="app_resume">继续</string>
    <string name="app_redownload">重下</string>
    <string name="app_retry">重试</string>
    <string name="app_delete">删除</string>
    
    <string name="task_note">任务提醒</string>
    <string name="have_approval_to_handle">您有新的审批任务请查看！</string>
    <string name="invoice_have_no_info">此单据没有详情！</string>
    
</resources>
