<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- header -->
    <include layout="@layout/header_action_bar"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_margin"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/server_config_url_et"
            style="@style/NormalEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_frame_height"
            android:gravity="center_vertical"
            android:hint="@string/server_config_url_hint"
            android:imeOptions="flagNoExtractUi"
            android:singleLine="true"
            android:paddingLeft="6dp"
            android:background="@drawable/edit_textview_bg"
            android:textColorHint="#979ca2"
            android:text="@string/default_server_confi_url"
            android:textCursorDrawable="@drawable/pl_edittext_cursor" />

        <EditText
            android:id="@+id/server_config_port_et"
            style="@style/NormalEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_frame_height"
            android:gravity="center_vertical"
            android:hint="@string/server_config_port_hint"
            android:layout_marginTop="10dp"
            android:imeOptions="flagNoExtractUi"
            android:background="@drawable/edit_textview_bg"
            android:maxLength="18"
            android:paddingLeft="6dp"
            android:singleLine="true"
           	android:text="@string/default_server_confi_port"
            android:textColorHint="#979ca2"
            android:textCursorDrawable="@drawable/pl_edittext_cursor" />
    </LinearLayout>

</LinearLayout>