<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pl_pada_loading_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:visibility="gone" >

    <LinearLayout
        android:id="@+id/pl_pada_loading"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:paddingTop="30dp"
	    android:paddingBottom="30dp"
	    android:paddingLeft="50dp"
	    android:paddingRight="50dp"
	    android:layout_gravity="center"
	    android:gravity="center" >
	    
        <ProgressBar
            android:id="@+id/pl_loading_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="false"
            android:indeterminateDrawable="@drawable/loading_icon" 
            android:indeterminateDuration="500"/>
        
        <TextView 
            android:id="@+id/pl_loading_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pl_loading"
            android:gravity="center_vertical"
            android:textSize="22sp"
            android:textColor="@color/pl_main_text_color"
            android:layout_marginRight="6dp"/>
	        
	</LinearLayout>
    
    <LinearLayout
        android:id="@+id/pl_pada_listview_no_networking"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/pl_network_unavailable" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:singleLine="true"
            android:text="@string/pl_error_msg_net_refresh"
            android:textColor="@color/pl_deputy_text_color"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/pl_network_setting_btn"
                style="@style/NormalBlueButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/pl_network_setting_btn" />

            <View
                android:layout_width="18dp"
                android:layout_height="1dp" />

            <Button
                android:id="@+id/pl_network_retry_btn"
                style="@style/NormalBlueButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/pl_refresh_retry_btn" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>