<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg_color"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_logo_margin_top"
        android:gravity="center" >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/login_logo_width"
            android:layout_height="@dimen/login_logo_height"
            android:src="@drawable/logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/login_margin"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/login_account_frame"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_frame_height"
            android:background="@drawable/edit_textview_bg"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_horizontal" >

            <CheckBox
                android:id="@+id/expansion_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="12dp"
                android:button="@null"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/login_account_et"
                style="@style/NormalEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="12dp"
                android:layout_toLeftOf="@id/expansion_cb"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/login_account_hint"
                android:imeOptions="flagNoExtractUi"
                android:maxLength="18"
                android:singleLine="true"
                android:textColorHint="@color/pl_deputy_text_color"
                android:textCursorDrawable="@drawable/pl_edittext_cursor" />
        </RelativeLayout>

        <!--
            <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/pl_line" />
        -->

        <RelativeLayout
            android:id="@+id/login_pwd_frame"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_frame_height"
            android:layout_marginTop="@dimen/common_margin_top"
            android:background="@drawable/edit_textview_bg"
            android:gravity="center_horizontal" >

            <CheckBox
                android:id="@+id/show_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="12dp"
                android:background="@drawable/icon_show_hide"
                android:button="@null" />

            <EditText
                android:id="@+id/login_pwd_et"
                style="@style/NormalEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="12dp"
                android:layout_toLeftOf="@id/show_cb"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/login_pwd_hint"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textPassword"
                android:maxLength="18"
                android:singleLine="true"
                android:textColorHint="@color/pl_deputy_text_color"
                android:textCursorDrawable="@drawable/pl_edittext_cursor" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/zt_select_rl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_frame_height"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/login_margin_left"
        android:layout_marginRight="@dimen/login_margin_right"
        android:layout_marginTop="@dimen/common_margin_top"
        android:background="@drawable/edit_textview_bg" >

        <ImageView
            android:id="@+id/zt_select_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:src="@drawable/icon_arrow" />

        <TextView
            android:id="@+id/zt_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:text="@string/p_select_zt_text"
            android:textColor="@color/pl_deputy_text_color"
            android:textSize="@dimen/pl_small_text_size" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_margin_left"
            android:layout_marginTop="@dimen/common_margin_top"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/remmenber_pwd_cb"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/normal_login_check_button"
                android:button="@null"
                android:gravity="center_vertical" />

            <TextView
                android:id="@+id/remmenber_pwd_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/remmenber_pwd_tv_margin_left"
                android:gravity="center_vertical"
                android:text="@string/remmenber_pwd_text"
                android:textColor="@android:color/white"
                android:textSize="@dimen/pl_small_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/login_margin_right"
            android:layout_marginTop="@dimen/common_margin_top"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/auto_login_cb"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginRight="@dimen/common_margin_right"
                android:background="@drawable/normal_login_check_button"
                android:button="@null"
                android:gravity="center_vertical|right" />

            <TextView
                android:id="@+id/auto_login_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|right"
                android:text="@string/auto_login_text"
                android:textColor="@android:color/white"
                android:textSize="@dimen/pl_small_text_size" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/login_btn"
        style="@style/NormalBlueButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_btn_height"
        android:layout_marginLeft="@dimen/login_btn_margin_left"
        android:layout_marginRight="@dimen/login_btn_margin_right"
        android:layout_marginTop="@dimen/login_btn_margin_top"
        android:gravity="center"
        android:text="@string/login_text"
        android:textSize="@dimen/pl_small_text_size" />

</LinearLayout>