<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00000000" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/user_info_rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp" >

            <ImageView
                android:id="@+id/user_head_img"
                android:layout_width="@dimen/head_image_width"
                android:layout_height="@dimen/head_image_height"
                android:src="@drawable/icon_head_portrait" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="36dp"
                android:layout_toRightOf="@id/user_head_img"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/user_name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:text="@string/user_info_no_data"
                    android:textColor="@color/second_info_header_color5"
                    android:textSize="@dimen/pl_medium_text_size" />

                <TextView
                    android:id="@+id/user_dept_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/user_info_margin_top"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:text="@string/user_info_no_data"
                    android:textColor="@color/second_info_header_color5"
                    android:textSize="@dimen/pl_mimi_text_size" />

                <TextView
                    android:id="@+id/user_account_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/user_info_margin_top"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:text="@string/user_info_no_data"
                    android:textColor="@color/second_info_header_color5"
                    android:textSize="@dimen/pl_mimi_text_size" />
            </LinearLayout>
        </RelativeLayout>

        <View
            android:id="@+id/line_1"
            android:layout_width="@dimen/reside_menu_line_width"
            android:layout_height="2dp"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="30dp"
            android:background="#363837"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:orientation="vertical" >
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left|bottom"
        android:orientation="vertical" >

        <View
            android:id="@+id/line_2"
            android:layout_width="@dimen/reside_menu_line_width"
            android:layout_height="1dp"
            android:layout_marginLeft="12dp"
            android:layout_marginBottom="18dp"
            android:background="#363837"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/setting_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/switch_accout_ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/switch_accout_iv"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/icon_change_accout" />

                <TextView
                    android:id="@+id/switch_text_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="6dp"
                    android:text="@string/switch_account_text"
                    android:textColor="@color/second_info_header_color6"
                    android:textSize="@dimen/pl_micro_text_size" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/login_out_ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp" >

                <ImageView
                    android:id="@+id/login_out_iv"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/icon_profile" />

                <TextView
                    android:id="@+id/loginout_text_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="6dp"
                    android:text="@string/loginout_text"
                    android:textColor="@color/second_info_header_color6"
                    android:textSize="@dimen/pl_micro_text_size" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</merge>